# actions-poetry

./: .dockerignore  Dockerfile  Dockerfile-core  LICENSE  README.md  action.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.sh
.dependabot/: config.yml
.github/: FUNDING.yml  main.workflow
.github/workflows/: ci.yml  lint-pr.yml  master.yml  push.yml  test.yml
