[tool.poetry]
name = "actions-poetry"
version = "0.0.0"
description = "This project is to demonstrate caching of a pyproject install"
authors = ["Aaron <AaronBatilo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
