[tool.poetry]
name = "actions-poetry"
version = "0.1.0"
description = ""
authors = ["tokusumi <tksmtoms@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
